# weather-app

./: .env  Cargo.toml
migrations/2023-07-15-174132_create_weather/: up.sql
src/: database.rs  main.rs  models.rs  routes.rs  schema.rs
src/controllers/: api_controller.rs  form_controller.rs  home_controller.rs  list_controller.rs  mod.rs
src/dao/: item_dao.rs  mod.rs
src/services/: item_service.rs
src/templates/: form.html  home.html  list.html
src/views/: form.rs  home.rs  list.rs  mod.rs
